Added episodes to ofidtales.html and split css for single stacked and double stacked TikTok embed videos.

--- a/promote.html
+++ b/promote.html
@@ -109,7 +109,7 @@
 				<li class="active"><a href="explore.html">Services</a></li>
 				<li><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="ofidkid.html">OFiD Tales</a></li>
+				<li><a href="ofidtales.html">OFiD Tales</a></li>
 				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
@@ -295,95 +295,89 @@
 		
 				</header>
 
-				<!-- TikTok Embed -->
-				<div class="tiktok-videos-container">
-					<!-- First TikTok Embed -->
-					<div class="tiktok-video-wrapper" id="trailers">
-						<header class="tiktok-header">
-							<h2>Trailer 1: Grow with Us</h2>
-						</header>
-						<div class="tiktok video main">
-							<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7483978367784602886"
-								data-video-id="7483978367784602886" style="max-width: 605px;min-width: 325px;">
-								<section> <a target="_blank" title="@ofidtales"
-										href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> Unlocking the Secrets of
-									Meme Coins 🔐 <a title="memecoins" target="_blank"
-										href="https://www.tiktok.com/tag/memecoins?refer=embed">#memecoins</a>, <a title="cryptotrading"
-										target="_blank" href="https://www.tiktok.com/tag/cryptotrading?refer=embed">#cryptotrading</a>,
-									<a title="digitalcurrency" target="_blank"
-										href="https://www.tiktok.com/tag/digitalcurrency?refer=embed">#digitalcurrency</a>, <a
-										title="financialeducation" target="_blank"
-										href="https://www.tiktok.com/tag/financialeducation?refer=embed">#financialeducation</a>, <a
-										title="crypto" target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a>
-									<a title="bouncyball" target="_blank"
-										href="https://www.tiktok.com/tag/bouncyball?refer=embed">#bouncyball</a>, <a title="solana"
-										target="_blank" href="https://www.tiktok.com/tag/solana?refer=embed">#solana</a>, <a
-										title="ofidkid" target="_blank"
-										href="https://www.tiktok.com/tag/ofidkid?refer=embed">#ofidkid</a>, <a title="ofidcrypt"
-										target="_blank" href="https://www.tiktok.com/tag/ofidcrypt?refer=embed">#ofidcrypt</a>, <a
-										title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a>, <a
-										title="foryoupage" target="_blank"
-										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @I See Crypto༘
-									@OFiDCrypt e𝕏P Web3™ <a target="_blank" title="♬ TITAN! (Ultra Slowed) - GXMZ"
-										href="https://www.tiktok.com/music/TITAN-Ultra-Slowed-7457203853475235857?refer=embed">♬ TITAN!
-										(Ultra Slowed) - GXMZ</a> </section>
-							</blockquote>
-							<script async src="https://www.tiktok.com/embed.js"></script>
-						</div>
-					</div>
-
-					<!-- Second TikTok Embed -->
-					<div class="tiktok-video-wrapper" id="part2">
-						<header class="tiktok-header">
-							<h2>Trailer 2: New Players in Canada</h2>
-						</header>
-						<div class="tiktok video main">
-							<blockquote class="tiktok-embed"
-								cite="https://www.tiktok.com/@ofidtales/video/7504331353756847365"
-								data-video-id="7504331353756847365" style="max-width: 605px;min-width: 325px;">
-								<section> <a target="_blank" title="@ofidtales"
-										href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> PART 2 of 3:
-									How to
-									Buy
-									Solana!
-									Phantom Wallet Tutorial: Do it all from one app; a safe place to store your crypto
-									and
-									earned
-									tokens! <a title="crypto" target="_blank"
-										href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a> <a
-										title="solana" target="_blank"
-										href="https://www.tiktok.com/tag/solana?refer=embed">#solana</a> <a title="web3"
-										target="_blank" href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a
-										title="cryptowallet" target="_blank"
-										href="https://www.tiktok.com/tag/cryptowallet?refer=embed">#cryptowallet</a> <a
-										title="tokens" target="_blank"
-										href="https://www.tiktok.com/tag/tokens?refer=embed">#tokens</a> <a
-										title="ofidkid" target="_blank"
-										href="https://www.tiktok.com/tag/ofidkid?refer=embed">#OFiDKid</a> <a
-										title="tutorial" target="_blank"
-										href="https://www.tiktok.com/tag/tutorial?refer=embed">#tutorial</a> <a
-										title="babytokin" target="_blank"
-										href="https://www.tiktok.com/tag/babytokin?refer=embed">#BabyTokin</a> <a
-										title="fyp" target="_blank"
-										href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
-										target="_blank"
-										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @Crypto
-									Mason
-									@Linda-Marie
-									Emmerson @DeFi Space @Tiffany <a target="_blank"
-										title="♬ Little Things - Adrián Berenguer"
-										href="https://www.tiktok.com/music/Little-Things-6981828410792216577?refer=embed">♬
-										Little
-										Things -
-										Adrián Berenguer</a>
-								</section>
-							</blockquote>
-						</div>
+			<!-- TikTok Embed -->
+			<div class="tiktok-videos-container-pair">
+				<!-- First TikTok Embed -->
+				<div class="tiktok-video-wrapper" id="trailers">
+					<header class="tiktok-header">
+						<h2>1: Grow with Us</h2>
+					</header>
+					<div class="tiktok video main">
+						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7483978367784602886"
+							data-video-id="7483978367784602886" style="max-width: 605px;min-width: 325px;">
+							<section> <a target="_blank" title="@ofidtales"
+									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> Unlocking the Secrets of
+								Meme Coins 🔐 <a title="memecoins" target="_blank"
+									href="https://www.tiktok.com/tag/memecoins?refer=embed">#memecoins</a>, <a title="cryptotrading"
+									target="_blank" href="https://www.tiktok.com/tag/cryptotrading?refer=embed">#cryptotrading</a>,
+								<a title="digitalcurrency" target="_blank"
+									href="https://www.tiktok.com/tag/digitalcurrency?refer=embed">#digitalcurrency</a>, <a
+									title="financialeducation" target="_blank"
+									href="https://www.tiktok.com/tag/financialeducation?refer=embed">#financialeducation</a>, <a
+									title="crypto" target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a>
+								<a title="bouncyball" target="_blank"
+									href="https://www.tiktok.com/tag/bouncyball?refer=embed">#bouncyball</a>, <a title="solana"
+									target="_blank" href="https://www.tiktok.com/tag/solana?refer=embed">#solana</a>, <a
+									title="ofidkid" target="_blank"
+									href="https://www.tiktok.com/tag/ofidkid?refer=embed">#ofidkid</a>, <a title="ofidcrypt"
+									target="_blank" href="https://www.tiktok.com/tag/ofidcrypt?refer=embed">#ofidcrypt</a>, <a
+									title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a>, <a
+									title="foryoupage" target="_blank"
+									href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @I See Crypto༘
+								@OFiDCrypt e𝕏P Web3™ <a target="_blank" title="♬ TITAN! (Ultra Slowed) - GXMZ"
+									href="https://www.tiktok.com/music/TITAN-Ultra-Slowed-7457203853475235857?refer=embed">♬ TITAN!
+									(Ultra Slowed) - GXMZ</a>
+							</section>
+						</blockquote>
+						<script async src="https://www.tiktok.com/embed.js"></script>
 					</div>
 				</div>
-
+			
+				<!-- Second TikTok Embed -->
+				<div class="tiktok-video-wrapper" id="part2">
+					<header class="tiktok-header">
+						<h2>2: Born in Canada</h2>
+					</header>
+					<div class="tiktok video main">
+						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7504331353756847365"
+							data-video-id="7504331353756847365" style="max-width: 605px;min-width: 325px;">
+							<section> <a target="_blank" title="@ofidtales"
+									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> PART 2 of 3:
+								How to
+								Buy
+								Solana!
+								Phantom Wallet Tutorial: Do it all from one app; a safe place to store your crypto
+								and
+								earned
+								tokens! <a title="crypto" target="_blank"
+									href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a> <a title="solana"
+									target="_blank" href="https://www.tiktok.com/tag/solana?refer=embed">#solana</a> <a title="web3"
+									target="_blank" href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a
+									title="cryptowallet" target="_blank"
+									href="https://www.tiktok.com/tag/cryptowallet?refer=embed">#cryptowallet</a> <a title="tokens"
+									target="_blank" href="https://www.tiktok.com/tag/tokens?refer=embed">#tokens</a> <a
+									title="ofidkid" target="_blank"
+									href="https://www.tiktok.com/tag/ofidkid?refer=embed">#OFiDKid</a> <a title="tutorial"
+									target="_blank" href="https://www.tiktok.com/tag/tutorial?refer=embed">#tutorial</a> <a
+									title="babytokin" target="_blank"
+									href="https://www.tiktok.com/tag/babytokin?refer=embed">#BabyTokin</a> <a title="fyp"
+									target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
+									target="_blank" href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @Crypto
+								Mason
+								@Linda-Marie
+								Emmerson @DeFi Space @Tiffany <a target="_blank" title="♬ Little Things - Adrián Berenguer"
+									href="https://www.tiktok.com/music/Little-Things-6981828410792216577?refer=embed">♬
+									Little
+									Things -
+									Adrián Berenguer</a>
+							</section>
+						</blockquote>
+						<script async src="https://www.tiktok.com/embed.js"></script>
+					</div>
+				</div>
+			</div>
 			</section>
-		</div>
+			</div>
 
 		<!-- Footer -->
 		<footer id="footer">
