Updated token page bouncyball.html and added episode 3 of Giddy Tales to ofidtales.html.

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 
-				<!-- TikTok Embed - EPISODES-->
+				<!-- TikTok Embed - EPISODES - BLOCK 1-->
 				<div class="tiktok-videos-container-pair" id="giddy-tales">
 					<!-- First TikTok Embed -->
 					<div class="tiktok-video-wrapper" id="ep1">
@@ -232,7 +232,6 @@
 										[Animals and dishes] Cute BGM - Sound Owl</a>
 								</section>
 							</blockquote>
-							<script async src="https://www.tiktok.com/embed.js"></script>
 						</div>
 					</div>
 				
@@ -269,7 +268,45 @@
 										Ting
 										Tings</a> </section>
 							</blockquote>
-							<script async src="https://www.tiktok.com/embed.js"></script>
+						</div>
+					</div>
+				</div>
+
+				<!-- TikTok Embed - EPISODES - BLOCK 2-->
+				<div class="tiktok-videos-container-pair" id="giddy-tales">
+					<!-- Third TikTok Embed -->
+					<div class="tiktok-video-wrapper" id="ep1">
+						<header class="tiktok-header">
+							<h2>Ep. 3: Buster Eyes His Prize</h2>
+						</header>
+						<div class="tiktok video main">
+							<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7505305491837439238"
+								data-video-id="7505305491837439238" style="max-width: 605px;min-width: 325px;">
+								<section> <a target="_blank" title="@ofidtales"
+										href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> GIDDY TALES 🪄 Buster Eyes
+									His Prize 🏆 &#34;We can focus on our own goals and collaboration without fixating solely on
+									competition&#34; 😊 <a title="inspiration" target="_blank"
+										href="https://www.tiktok.com/tag/inspiration?refer=embed">#inspiration</a> <a title="anxiety"
+										target="_blank" href="https://www.tiktok.com/tag/anxiety?refer=embed">#anxiety</a> <a
+										title="motivate" target="_blank"
+										href="https://www.tiktok.com/tag/motivate?refer=embed">#motivate</a> <a title="collaboration"
+										target="_blank" href="https://www.tiktok.com/tag/collaboration?refer=embed">#collaboration</a>
+									<a title="ofidtales" target="_blank"
+										href="https://www.tiktok.com/tag/ofidtales?refer=embed">#OFiDTales</a> <a title="web3"
+										target="_blank" href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a title="crypto"
+										target="_blank" href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a> <a title="cute"
+										target="_blank" href="https://www.tiktok.com/tag/cute?refer=embed">#cute</a> <a
+										title="animation" target="_blank"
+										href="https://www.tiktok.com/tag/animation?refer=embed">#animation</a> <a title="kidsoftiktok"
+										target="_blank" href="https://www.tiktok.com/tag/kidsoftiktok?refer=embed">#kidsoftiktok</a> <a
+										title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a
+										title="foryoupage" target="_blank"
+										href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @OFiDCrypt e𝕏P Web3™
+									@Linda-Marie Emmerson @Lillicity @DeFi Space @Crypto Mason @Crypto Vic @TheCryptoChik @CNN <a
+										target="_blank" title="♬ The Champion - Lux-Inspira"
+										href="https://www.tiktok.com/music/The-Champion-7086103923756402689?refer=embed">♬ The Champion
+										- Lux-Inspira</a> </section>
+							</blockquote>
 						</div>
 					</div>
 				</div>
@@ -333,7 +370,7 @@
 				
 							<!-- Social Nav Button 2 -->
 							<div>
-								<button class="round-button"><a href="https://ofidcrypt.ca/new-ofid-bouncy-ball-epb">Explore Bouncy
+								<button class="round-button"><a href="/bouncyball.html">Explore Bouncy
 										Ball</a></button>
 							</div>
 						</div>
