--- a/ofidtales.html
+++ b/ofidtales.html
@@ -155,7 +155,7 @@
 						<article class="quick-start-item"> <span class="image left"><img
 									src="/assets/images/giddy-tales-logo.jpg" alt="OFiD Crew Giddy Character"></span>
 							<div class="quick-start-content">
-								<h3 class="quick-start-title">Giddy Tales</h3>
+								<h3 id="giddy-tales" class="quick-start-title">Giddy Tales</h3>
 								<p class="align-center">Magical Adventures</p> <button class="round-button"><a
 										href="#giddy-tales">View Series</a></button>
 							</div>
