--- a/ofidtales.html
+++ b/ofidtales.html
@@ -152,10 +152,10 @@
 		
 				<section class="quick-start-section">
 					<div class="quick-start-items">
-						<article class="quick-start-item"> <span class="image left"><img
+						<article id="giddy-tales-nav" class="quick-start-item"> <span class="image left"><img
 									src="/assets/images/giddy-tales-logo.jpg" alt="OFiD Crew Giddy Character"></span>
 							<div class="quick-start-content">
-								<h3 id="giddy-tales" class="quick-start-title">Giddy Tales</h3>
+								<h3 class="quick-start-title">Giddy Tales</h3>
 								<p class="align-center">Magical Adventures</p> <button class="round-button"><a
 										href="#giddy-tales">View Series</a></button>
 							</div>
