--- a/bouncyball.html
+++ b/bouncyball.html
@@ -178,9 +178,9 @@
 					<p>Giddy’s Bouncy Ball (e𝕏PB) is a fun, secure, and rewarding token with real-world value 🎉 With only 1 billion
 						ever created, it drives business, web3 adoption, and entertainment.</p>
 				
-					<p style="text-align: center;">Easy to get and safe to hold, Bouncy Ball grows as the <a href="/ofidtales.html#giddy-tales">Giddy Tales Series</a> gains
+					<p style="text-align: center;">Easy to get and safe to hold, Bouncy Ball grows as the <a href="/ofidtales.html#giddy-tales-nav">Giddy Tales Series</a> gains
 						popularity, more people buy in, and business expands. Whether for rewards, innovation, or fun, it's rolling
-						toward a future where web3 meets creativity! 🚀🔵</p>
+						toward a future where web3 meets creativity! 🚀</p>
 				
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
