Updated ad banner to expb buy accross pages and updated top-tip graphic on bouncyball.html

--- a/explore.html
+++ b/explore.html
@@ -145,7 +145,7 @@
 			<!-- Scrolling Ad Banner -->
 						<div id="expb-ball" class="ad-banner-wrapper">
 							<div class="ad-scroll-container">
-								<a href="https://t.me/OFiDBall" class="ad-slide" style="border-bottom: none;">
+								<a href="/bouncyball.html" class="ad-slide" style="border-bottom: none;">
 									<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 1" style="max-width: 100%; height: auto;">
 								</a>
 								<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
