--- a/ofidtales.html
+++ b/ofidtales.html
@@ -133,7 +133,7 @@
 			<!-- Scrolling Ad Banner -->
 			<div id="expb-ball" class="ad-banner-wrapper">
 				<div class="ad-scroll-container">
-					<a href="https://t.me/OFiDBall" class="ad-slide" style="border-bottom: none;">
+					<a href="/bouncyball.html" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 1" style="max-width: 100%; height: auto;">
 					</a>
 				</div>
