--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -142,7 +142,7 @@
 			<!-- Ad Banner -->
 			<section id="expb-ball" class="ad-banner">
 				<div style="text-align: center;">
-					<a href="https://t.me/OFiDBall" style="border-bottom: none;">
+					<a href="../bouncyball.html" style="border-bottom: none;">
 						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner"
 							style="max-width: 100%; height: auto;">
 					</a>
