--- a/promote.html
+++ b/promote.html
@@ -139,16 +139,19 @@
 		<div id="main">
 		
 			<!-- Scrolling Ad Banner -->
-			<div id="expb-ball" class="ad-banner-wrapper">
-				<div class="ad-scroll-container">
-					<a href="/bouncyball.html" class="ad-slide" style="border-bottom: none;">
-						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 1" style="max-width: 100%; height: auto;">
-					</a>
-					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
-						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 2" style="max-width: 100%; height: auto;">
-					</a>
-				</div>
-			</div>
+						<div id="expb-ball" class="ad-banner-wrapper">
+							<div class="ad-scroll-container">
+								<a href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=aa8d4fce2d9a&tracker=ofid_banner_index" class="ad-slide" style="border-bottom: none;">
+									<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1" style="max-width: 100%; height: auto;">
+								</a>
+								<a href="/bouncyball.html" class="ad-slide" style="border-bottom: none;">
+									<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 2" style="max-width: 100%; height: auto;">
+								</a>
+								<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
+									<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 3" style="max-width: 100%; height: auto;">
+								</a>
+							</div>
+						</div>
 		
 			<script>
 				document.addEventListener('DOMContentLoaded', () => {
