Updates service trailer video on promote.html

--- a/promote.html
+++ b/promote.html
@@ -342,40 +342,24 @@
 						<h2>2: Born in Canada</h2>
 					</header>
 					<div class="tiktok video main">
-						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7504331353756847365"
-							data-video-id="7504331353756847365" style="max-width: 605px;min-width: 325px;">
+						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7520673663033625912"
+							data-video-id="7520673663033625912" style="max-width: 605px;min-width: 325px;">
 							<section> <a target="_blank" title="@ofidtales"
-									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> PART 2 of 3:
-								How to
-								Buy
-								Solana!
-								Phantom Wallet Tutorial: Do it all from one app; a safe place to store your crypto
-								and
-								earned
-								tokens! <a title="crypto" target="_blank"
-									href="https://www.tiktok.com/tag/crypto?refer=embed">#crypto</a> <a title="solana"
-									target="_blank" href="https://www.tiktok.com/tag/solana?refer=embed">#solana</a> <a title="web3"
-									target="_blank" href="https://www.tiktok.com/tag/web3?refer=embed">#web3</a> <a
-									title="cryptowallet" target="_blank"
-									href="https://www.tiktok.com/tag/cryptowallet?refer=embed">#cryptowallet</a> <a title="tokens"
-									target="_blank" href="https://www.tiktok.com/tag/tokens?refer=embed">#tokens</a> <a
-									title="ofidkid" target="_blank"
-									href="https://www.tiktok.com/tag/ofidkid?refer=embed">#OFiDKid</a> <a title="tutorial"
-									target="_blank" href="https://www.tiktok.com/tag/tutorial?refer=embed">#tutorial</a> <a
-									title="babytokin" target="_blank"
-									href="https://www.tiktok.com/tag/babytokin?refer=embed">#BabyTokin</a> <a title="fyp"
-									target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="foryoupage"
-									target="_blank" href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @Crypto
-								Mason
-								@Linda-Marie
-								Emmerson @DeFi Space @Tiffany <a target="_blank" title="♬ Little Things - Adrián Berenguer"
-									href="https://www.tiktok.com/music/Little-Things-6981828410792216577?refer=embed">♬
-									Little
-									Things -
-									Adrián Berenguer</a>
-							</section>
+									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> eXP PROMOTE 💫 We’re launching
+								services to SPOTLIGHT your product or app—or be the one to TRY it—where brands don’t just get a new
+								audience; they REWARD them! <a title="ofidcrypt" target="_blank"
+									href="https://www.tiktok.com/tag/ofidcrypt?refer=embed">#OFiDCrypt</a> <a title="marketing"
+									target="_blank" href="https://www.tiktok.com/tag/marketing?refer=embed">#Marketing</a> <a
+									title="create" target="_blank" href="https://www.tiktok.com/tag/create?refer=embed">#Create</a> <a
+									title="design" target="_blank" href="https://www.tiktok.com/tag/design?refer=embed">#Design</a> <a
+									title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a
+									title="foryoupage" target="_blank"
+									href="https://www.tiktok.com/tag/foryoupage?refer=embed">#foryoupage</a> @Crypto Mason @OFiDCrypt
+								e𝕏P Web3™ @Linda-Marie Emmerson @DeFi Space @LilianOnETH @Lillicity <a target="_blank"
+									title="♬ This Is Canada - Viral Sound Empire &#38; Canadian Bacon"
+									href="https://www.tiktok.com/music/This-Is-Canada-7387070734416349185?refer=embed">♬ This Is Canada
+									- Viral Sound Empire &#38; Canadian Bacon</a> </section>
 						</blockquote>
-						<script async src="https://www.tiktok.com/embed.js"></script>
 					</div>
 				</div>
 			</div>
