updated airdrop #2 post on community.html

--- a/community.html
+++ b/community.html
@@ -426,27 +426,13 @@
 					<!-- X Post Embed: Row Slot 2 -->
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">Following Airdrop #2; <a
-									href="https://twitter.com/search?q=%24eXPB&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$eXPB</a>
-								will have 500
-								holders! 🚀🚀<br><br>Trailer Video v2 Added! 📹<br><br>Questions about <a
-									href="https://twitter.com/search?q=%24Kin&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$Kin</a>
-								and
-								liquidity?<br><br>Join <a
-									href="https://twitter.com/zsadik64?ref_src=twsrc%5Etfw">@zsadik64</a> in Flipchat
-								#563<br>👉 <a href="https://t.co/ZV82iCdSNg">https://t.co/ZV82iCdSNg</a><br><br>Or
-								OFiDCrypt in Flipchat
-								#350<br>👉 <a href="https://t.co/nfoDbsigch">https://t.co/nfoDbsigch</a><a
-									href="https://twitter.com/Kin_Ecosystem?ref_src=twsrc%5Etfw">@Kin_Ecosystem</a> <a
-									href="https://twitter.com/flipchat_app?ref_src=twsrc%5Etfw">@flipchat_app</a> <a
-									href="https://twitter.com/solana?ref_src=twsrc%5Etfw">@solana</a>… <a
-									href="https://t.co/CSPKAbdT0d">https://t.co/CSPKAbdT0d</a> <a
-									href="https://t.co/iJ5kwsNehl">pic.twitter.com/iJ5kwsNehl</a></p>&mdash; OFiDCrypt
-							e𝕏P Web3™
-							(@OFiDCrypt) <a
-								href="https://twitter.com/OFiDCrypt/status/1901223961155043640?ref_src=twsrc%5Etfw">March
-								16,
-								2025</a>
+							<p lang="en" dir="ltr">AIRDROP: 500 e𝕏PB Wallets 🎊<br>AIRSHOT 🎯 With Livestream Grand Prize Draw!
+								🏆<br><br>💬 “Drop Your SOL Address”… ⚠️ Read Post 5 Rules Carefully!<br><br>🎥 LIVESTREAM: Wednesday 23rd
+								April at 3:00 PM PST (Attendance not required for rewards) 🎊<br><br>TIER 1 (Basic Qualification): X Social
+								Follows… <a href="https://t.co/0Lj7FySRMK">https://t.co/0Lj7FySRMK</a> <a
+									href="https://t.co/kD8SGbGJjX">pic.twitter.com/kD8SGbGJjX</a></p>&mdash; Tokin 🍁 OFiD Web3 &amp; AI
+							Design™ (@OFiDCrypt) <a
+								href="https://twitter.com/OFiDCrypt/status/1913034970513433037?ref_src=twsrc%5Etfw">April 18, 2025</a>
 						</blockquote>
 					</div>
 				</div>
