Updated structure on various pages and added dynamic banner. Added affiliates to affiliate.html. Revised about.html to better describe our mission--added token and microeconomies paragraphs. Added several images and fixed 404 page not redirecting users from relative links.

--- a/404.html
+++ b/404.html
@@ -98,16 +98,16 @@
 		<a href="#darkModePanel" id="darkModeToggle" class="alt">
 			<i class="fas fa-sun"></i>
 		</a>
-
+		
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="explore.html">Services</a></li>
-				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="ofidtales.html">OFiD Tales</a></li>
-				<li><a href="pages/about.html">About</a></li>
+				<li><a href="/index.html">Home</a></li>
+				<li><a href="/explore.html">Services</a></li>
+				<li><a href="/community.html">Community</a></li>
+				<li><a href="/pages/livestream.html">𝕏 Live Spaces</a></li>
+				<li><a href="/ofidtales.html">OFiD Tales</a></li>
+				<li><a href="/pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -212,7 +212,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About</a></li>
+				<li><a href="/pages/about.html">About Us</a></li>
 			</ul>
 			<ul>
 				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
