--- a/bouncyball.html
+++ b/bouncyball.html
@@ -105,9 +105,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
 				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
+				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
 				<li><a href="ofidtales.html">OFiD Tales</a></li>
-				<li><a href="pages/about.html">About</a></li>
+				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -175,12 +175,17 @@
 				<header id="guide">
 					<h2>What is Bouncy Ball?</h2>
 					<!-- Section Description -->
-					<p>Giddy’s Bouncy Ball (e𝕏PB) is a fun, secure, and rewarding token with real-world value 🎉 With only 1 billion
-						ever created, it drives business, web3 adoption, and entertainment.</p>
+					<p>Giddy’s Bouncy Ball (e𝕏PB) is a fun, secure, and rewarding token with real-world value 🎉 With a fixed 1 billion
+						to ever be created, you can grab your share early--the opportunity to hold an asset that drives business, web3
+						adoption, and entertainment.</p>
 				
-					<p style="text-align: center;">Easy to get and safe to hold, Bouncy Ball grows as the <a href="/ofidtales.html#giddy-tales-nav">Giddy Tales Series</a> gains
-						popularity, more people buy in, and business expands. Whether for rewards, innovation, or fun, it's rolling
-						toward a future where web3 meets creativity! 🚀</p>
+					<p style="text-align: center;">
+						Easy to get and safe to hold, Bouncy Ball grows in many ways; such as with the
+						<a href="/ofidtales.html#giddy-tales-nav">Giddy Tales Series</a> as it gains popularity, or if more people buy
+						in to support us. Not only that, when we do business as usual—your portfolio will grow with us, even if you're not a
+						customer! Whether for rewards, innovation, or fun, it's rolling toward a future where Web3 meets creativity—and the more businesses that adopt
+						#MicroEconomies, the faster we all grow! 🚀
+					</p>
 				
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
@@ -300,7 +305,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About</a></li>
+				<li><a href="/pages/about.html">About Us</a></li>
 			</ul>
 			<ul>
 				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
