--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="explore.html">Services</a></li>
 							<li><a href="community.html">Community</a></li>
-							<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
+							<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
 							<li><a href="ofidtales.html">OFiD Tales</a></li>
-							<li><a href="pages/about.html">About</a></li>
+							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -399,7 +399,7 @@
 							<header id="guide">
 								<h2>Wallet Guide</h2>
 								<!-- Section Description -->
-								<p>Solana cryptocurrency operates on the <b>Solana Public Ledger</b>, similar to how cash transactions are processed
+								<p>Solana cryptocurrency operates on the <b>Solana Program Library</b>, similar to how cash transactions are processed
 									on Visa or
 									Mastercard networks. With just a click, you can swap Solana for our <b>Bouncy Ball Token</b> or others operating
 									on SPL.
@@ -582,7 +582,7 @@
 					<li><a href="/bouncyball.html">Token</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/affiliate.html">Partners</a></li>
-					<li><a href="/pages/about.html">About</a></li>
+					<li><a href="/pages/about.html">About Us</a></li>
 				</ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
