--- a/community.html
+++ b/community.html
@@ -109,9 +109,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
+				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
 				<li><a href="ofidtales.html">OFiD Tales</a></li>
-				<li><a href="pages/about.html">About</a></li>
+				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -613,7 +613,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About</a></li>
+				<li><a href="/pages/about.html">About Us</a></li>
 			</ul>
 			<ul>
 				<ul>
