--- a/explore.html
+++ b/explore.html
@@ -112,9 +112,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="explore.html">Services</a></li>
 				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
+				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
 				<li><a href="ofidtales.html">OFiD Tales</a></li>
-				<li><a href="pages/about.html">About</a></li>
+				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -575,7 +575,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About</a></li>
+				<li><a href="/pages/about.html">About Us</a></li>
 			</ul>
 			<ul>
 				<li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li>
