Refined text for clarity and replaced images on affiliate.html. Removed auto-scrolol from JS for the Mission--Updated mission and ONE Kin Community blurb on affiliate.html.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -392,13 +392,15 @@
 								<div style="text-align: center;">
 									<button class="button"><a href="../kincommunity.html">Visit Page</a></button>
 								</div>
-								<p>Kin is a cryptocurrency that follows Satoshi Nakamoto's vision of a direct,
-									peer-to-peer payment system. Unlike traditional money where banks or services are
-									the go-between, Kin allows people to send and receive payments directly from each
-									other. It's designed to be user-friendly, making transactions as simple as sending a
-									message, but with the added security of blockchain technology. With Kin, you can pay
-									for services, tip content creators, or just transfer money to friends without any
-									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger.</p>
+								<p>Originally launched in 2017 as an ICO within Kik Messenger, Kin served as a token for tipping content
+									creators, paying for services, and sending funds to friends—empowering users to participate in a vibrant
+									digital economy. While these use cases were active in its early phase, <a href="https://www.ofidcrypt.ca/speaking-for-a-community-partner-a-kin-announcement">the original token creator later
+									shifted focus to another project</a>, leaving much of Kin’s potential underutilized. Today, that potential
+									is being reignited. Kin has transformed into a collaborative hub, uniting trusted token projects,
+									partner communities, allied platforms, and app developers through shared liquidity. This renewed effort
+									is guided by the <b>ONE Kin Community</b>—a third-party collective leading with a community-first approach—and
+									supported by aligned groups such as OFiDCrypt. Together, they focus on restoring real-world utility and
+									reinforcing sustainable value for holders through a unified, collaborative vision.</p>
 							</div>
 						</div>
 					</article>
