Visual changed accross about.html and minor text edits. Focus on mobile display with stacked images for better visibility.

--- a/ofidkid.html
+++ b/ofidkid.html
@@ -323,7 +323,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About Us</a></li>
+				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
 				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
