--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -107,7 +107,7 @@
 							<li><a href="../explore.html">Services</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">𝕏 Live Spaces</a></li>
-							<li><a href="../ofidtales.html">OFiD Tales</a></li>
+							<li><a href="../ofidtales.html">Family Fun</a></li>
 							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
@@ -342,7 +342,7 @@
 									<span class="image right affiliate"><img src="../assets/images/partner-affiliate-ledger.PNG"
 											alt="Legder Logo Image"></span>
 								</a>
-								<h3 style="text-align: center;">Ledger Crypto Wallet | Security for Web3 & Defi</h3>
+								<h3 style="text-align: center;">Ledger Wallets | Physical Crypto Security</h3>
 								<!-- Partner Nav Button 2 -->
 								<div style="text-align: center;">
 									<button class="button"><a
@@ -365,7 +365,7 @@
 								<a href="https://hvr.world">
 									<span class="image left affiliate"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
 								</a>
-								<h3 style="text-align: center;">Hvr Browser | Where Sites Are Social</h3>
+								<h3 style="text-align: center;">Hvr | Where Sites Are Social</h3>
 								<!-- Partner Nav Button 1 -->
 								<div style="text-align: center;">
 									<button class="button"><a href="https://hvr.world">Visit Partner</a></button>
@@ -512,7 +512,7 @@
 						<li><a href="../bouncyball.html">Token</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="affiliate.html">Partners</a></li>
-						<li><a href="about.html">About Us</a></li></ul>
+						<li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
