--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -110,7 +110,7 @@
 				<li class="active"><a href="../explore.html">Services</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="../pages/livestream.html">𝕏 Live Spaces</a></li>
-				<li><a href="../ofidtales.html">OFiD Tales</a></li>
+				<li><a href="../ofidtales.html">Family Fun</a></li>
 				<li><a href="../pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -312,7 +312,7 @@
 				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Affiliate</a></li>
-				<li><a href="/pages/about.html">About Us</a></li>
+				<li><a href="/pages/about.html">About</a></li>
 
 			</ul>
 			<ul>
