--- a/ofidtales.html
+++ b/ofidtales.html
@@ -106,7 +106,7 @@
 				<li><a href="explore.html">Services</a></li>
 				<li><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
-				<li class="active"><a href="ofidtales.html">OFiD Tales</a></li>
+				<li class="active"><a href="ofidtales.html">Family Fun</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -687,7 +687,7 @@
 				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
-				<li><a href="/pages/about.html">About Us</a></li>
+				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
 				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
