Minor text editing changes and updated images. Fixed some margins.

--- a/pages/about.html
+++ b/pages/about.html
@@ -368,7 +368,7 @@
 									<button class="scroll-arrow left" aria-label="Scroll Left"><i
 											class="fas fa-arrow-left"></i></button>
 									<div class="box-content">
-										<span class="image"><img src="../assets/images/expb-3d-trans.gif"
+										<span class="image"><img src="../assets/images/bouncy-ball-500.png"
 												alt="Bouncy Ball 3D Logo"></span>
 										<h3>Our Token</h3>
 										<p>e𝕏PB <b>Bouncy Ball</b> is our shiny gem—right at the heart of our entire ecosystem!
