--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -346,8 +346,7 @@
 								<!-- Partner Nav Button 2 -->
 								<div style="text-align: center;">
 									<button class="button"><a
-											href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=aa8d4fce2d9a&tracker=ofid_affiliate_page">View
-											Nano S Plus</a></button>
+											href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=aa8d4fce2d9a&tracker=ofid_affiliate_page">Nano S Plus</a></button>
 								</div>
 								<p>Ledger wallets keep your crypto safe while putting you in charge. With your keys stored offline, you’re
 									protected from online threats without needing to rely on anyone else. That means you can send, receive,
