--- a/ofidtales.html
+++ b/ofidtales.html
@@ -291,7 +291,7 @@
 									src="/assets/images/giddy-tales-logo.jpg" alt="OFiD Crew Giddy Character"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Giddy Tales</h3>
-								<p class="align-center">Magical Adventures</p> <button class="round-button"><a
+								<p class="align-center">Animated Adventures</p> <button class="round-button"><a
 										href="#giddy-tales">View Series</a></button>
 							</div>
 						</article>
@@ -299,15 +299,15 @@
 									src="/assets/images/ofidkid-logo.jpg" alt="OFiD Crew Buster Character"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">The OFiD Kid</h3>
-								<p class="align-center">Explores The World</p>
+								<p class="align-center">Explore The World</p>
 								<button class="round-button"><a href="/ofidkid.html">Go To Page</a></button>
 							</div>
 						</article>
 						<article class="quick-start-item"> <span class="image left" id="expb-get"><img
 									src="/assets/images/ofidcrew-logo.PNG" alt="OFiD Crew Buster Character"></span>
 							<div class="quick-start-content">
-								<h3 class="quick-start-title">Meet The Crew's</h3>
-								<p class="align-center">Adorable Members</p>
+								<h3 class="quick-start-title">Meet The Crew</h3>
+								<p class="align-center">Fluffy Characters</p>
 								<button class="round-button"><a href="#meet-crew">Profiles</a></button>
 							</div>
 						</article>
@@ -474,7 +474,7 @@
 							alt="OFiD Crew Rex Character"></span>
 					<div class="quick-start-content">
 						<h3 class="quick-start-title">Rex</h3>
-						<p class="align-center">Shy & Pretty Fly for a Nice Guy!</p> <button class="round-button"><a
+						<p class="align-center">Pretty Fly for a Shy Guy!</p> <button class="round-button"><a
 								href="#rex">View Profile</a></button>
 					</div>
 				</article>
@@ -486,7 +486,7 @@
 						<div class="product-content">
 							<span class="image right" id="giddy"><img src="assets/images/ofidkid-giddy-01.jpg"
 									alt="OFiD Crew Giddy Character"></span>
-									<h2 class="no-top-margin" style="text-align: right;">Meet the Crew: Giddy</h2>
+									<h2 class="no-top-margin" style="text-align: center;">Meet the Crew: Giddy</h2>
 							<p>Giddy is the fun-loving, happy-go-lucky member of the OFiD Crew, bringing joy and excitement wherever she
 								goes.
 								Adorned in vibrant shades of purple, pink, and teal, Giddy is a burst of color and energy. She is never
@@ -518,7 +518,7 @@
 						<div class="product-content">
 							<span class="image left" id="buster"><img src="assets/images/ofidkid-buster-bouncer-02.jpg"
 									alt="OFiD Crew Buster Character"></span>
-									<h2 class="no-top-margin" style="text-align: left;">Buster the Bouncer</h2>
+									<h2 class="no-top-margin" style="text-align: center;">Buster the Bouncer</h2>
 							<p>Buster is the rugged bouncer of the OFiD Crew, known for his tough exterior and heart of gold. With a
 								striking teal
 								and purple colors, Buster stands out in any crowd. He dons a leather jacket that adds to his tough
@@ -546,7 +546,7 @@
 						<div class="product-content">
 							<span class="image right" id="rex"><img src="assets/images/ofidkid-rex-01.jpg"
 									alt="OFiD Crew Rex Character"></span>
-									<h2 class="no-top-margin" style="text-align: right;">Meet the Crew: Rex</h2>
+									<h2 class="no-top-margin" style="text-align: center;">Meet the Crew: Rex</h2>
 							<p>Rex is the cute and shy member of the OFiD Crew, always wearing his denim vest and glasses. With this
 								look and his
 								short, soft fur and striking red color, he is often seen as a stern and serious figure! Though
