Minor padding adjustments and element centering on affiliate.html

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -342,7 +342,7 @@
 									<span class="image right affiliate"><img src="../assets/images/partner-affiliate-ledger.PNG"
 											alt="Legder Logo Image"></span>
 								</a>
-								<h3 style="text-align: center;">Ledger Wallets | Physical Crypto Security</h3>
+								<h3 style="text-align: center;">Ledger Wallets | Physical Storage</h3>
 								<!-- Partner Nav Button 2 -->
 								<div style="text-align: center;">
 									<button class="button"><a
