--- a/bouncyball.html
+++ b/bouncyball.html
@@ -348,13 +348,13 @@
 					
 						<!-- Token Buttons -->
 						<div class="token-button-container">
-							<button class="token-button"><a href="https://phantom.com/..." target="_blank">Phantom</a></button>
-							<button class="token-button"><a href="https://moonshot.com/..." target="_blank">Moonshot</a></button>
-							<button class="token-button"><a href="https://jup.ag/..." target="_blank">Jupiter</a></button>
-							<button class="token-button"><a href="https://raydium.io/..." target="_blank">Raydium</a></button>
-							<button class="token-button"><a href="https://coingecko.com/..." target="_blank">CoinGecko</a></button>
-							<button class="token-button"><a href="https://coinranking.com/..." target="_blank">CoinRanking</a></button>
-							<button class="token-button"><a href="https://solscan.io/..." target="_blank">Solscan</a></button>
+							<button class="token-button"><a href="https://phantom.com/tokens/solana/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?referralId=3hjgncz9qx4" target="_blank">Phantom</a></button>
+							<button class="token-button"><a href="https://moonshot.com/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?ref=NnJDmKfzpM" target="_blank">Moonshot</a></button>
+							<button class="token-button"><a href="https://jup.ag/tokens/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump" target="_blank">Jupiter</a></button>
+							<button class="token-button"><a href="https://raydium.io/swap/?inputMint=GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump&outputMint=4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R" target="_blank">Raydium</a></button>
+							<button class="token-button"><a href="https://www.coingecko.com/en/coins/bouncy-ball-of-ofid-fun" target="_blank">CoinGecko</a></button>
+							<button class="token-button"><a href="https://coinranking.com/coin/h0ynh5w7U+bouncyballofofidfun-epb" target="_blank">CoinRanking</a></button>
+							<button class="token-button"><a href="https://solscan.io/token/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump" target="_blank">Solscan</a></button>
 						</div>
 					</section>
 					
